--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,18 @@
             "homepage": "https://vinkla.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/urakozz/vimeo.php"
+        }
+    ],
     "require": {
         "php": "^7.1.3",
         "illuminate/contracts": "^5.8",
         "illuminate/support": "^5.8",
         "graham-campbell/manager": "^4.0",
-        "vimeo/vimeo-api": "^3.0"
+        "vimeo/vimeo-api": "^3.1.0"
     },
     "require-dev": {
         "laravel/framework": "^5.8",
